--- a/views/secret.html
+++ b/views/secret.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<form onsubmit="getSecret(event)" id="form" class="pt-1 px-3 form-signin">
+<form onsubmit="getSecret(event)" id="form" class="p-3 form-signin">
   <h6 class="px-1 py-3 font-weight-normal">Enter passphrase for the requested secret</h6>
   <div class="mb-3 form-group">
     <input type="password" name="passphrase" class="form-control" autocomplete="off" placeholder="passphrase"
