--- a/views/files.html
+++ b/views/files.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<p class="px-3 font-weight-normal">Enter a file below you wish to send securely.<br /> The generated secret link
+<p class="mt-5 px-3 font-weight-normal">Enter a file below you wish to send securely.<br /> The generated secret link
   only works once to retrieve the file, then disappears forever.</p>
 <form onsubmit="postSecretFile(event)" id="form" class="pt-3 px-3 form-signin">
   <div class="mb-3 form-group">
