--- a/views/layout.html
+++ b/views/layout.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Secrets</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Secure ephemeral secrets sharing platform">
+  <meta name="theme-color" content="#4299E1">
+  <title>Ephemeral Secrets - Secure Sharing</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Fira+Code&display=swap"
+    rel="stylesheet">
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
     integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,18 +24,29 @@
   <link rel="stylesheet" href="/static/site.css" />
 </head>
 
-<body class="text-left py-3">
-  <div class="form form-signin w-100 my-0 mx-auto">
-    <div class="text-center"><i class="fas fa-user-shield fa-5x mx-auto"></i></div>
-    <h1 class="text-center display-4 mb-4 font-weight-normal">Ephemeral Secrets</h1>
+<body class="text-left">
+  <div class="form form-signin">
+    <div class="text-center main-title">
+      <div class="icon-wrapper">
+        <i class="fas fa-user-shield fa-4x"></i>
+      </div>
+      <h1 class="display-5">Ephemeral Secrets</h1>
+      <p>Secure, temporary secret sharing</p>
+    </div>
+
     {{template "content" .}}
-    <div id="results" class="mw-100 p-3">
-      <br />
+
+    <div id="results" class="mt-5">
       <div id="response">
-        <pre id="response_body" class="mw-50 fs-5"></pre>
+        <pre id="response_body" class="mb-0"></pre>
       </div>
     </div>
   </div>
+
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
+    integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="/static/main.js"></script>
 </body>
 
