--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,16 @@
     </select>
   </div>
   <div class="form-group">
+    <label for="TTLDays" class="form-label">Days Before Expiration:</label>
+    <select name="ttl_days" class="form-control form-select" id="TTLDays">
+      <option>1</option>
+      <option>3</option>
+      <option selected>7</option>
+      <option>14</option>
+      <option>30</option>
+    </select>
+  </div>
+  <div class="form-group">
     <input type="submit" class="btn btn-primary w-100" value="Create Secret Link">
   </div>
 </form>
