--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<form onsubmit="postSecret(event)" id="form">
+<form onsubmit="postSecret(event)" id="form" class="p-3 form-signin">
   <div class="form-group">
     <p class="font-weight-normal">Enter a password, secret message, or private link you wish to send
       securely. A secret link only works for the number of times specified, then disappears forever.</p>
