--- a/static/site.css
+++ b/static/site.css
@@ -59,7 +59,7 @@ body {
 .form-signin h1 {
   color: var(--purple);
   font-weight: 700;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .form-signin p {
@@ -80,7 +80,7 @@ body {
 .form-control {
   border: 1px solid var(--comment);
   border-radius: 0.375rem;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 1.25rem;
   transition: all 0.2s ease;
   background-color: var(--background);
   box-shadow: none;
@@ -180,10 +180,11 @@ input[type="file"].form-control::-webkit-file-upload-button:hover {
   opacity: 0;
   transform: translateY(5px);
   transition: all 0.3s ease;
-  background: var(--background);
   border-radius: 0.375rem;
   display: none;
   width: 100%;
+  padding: 0 1rem;
+  max-width: 900px;
   margin: 1rem auto;
 }
 
@@ -196,6 +197,7 @@ input[type="file"].form-control::-webkit-file-upload-button:hover {
 #response {
   margin: 0;
   height: 100%;
+  background: var(--background);
 }
 
 #response_body {
@@ -218,15 +220,14 @@ input[type="file"].form-control::-webkit-file-upload-button:hover {
   }
 
   .form-signin h1 {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
 }
 
 .alert {
   border-radius: 0.375rem;
-  margin-bottom: 1rem;
-  padding: 1rem;
   border: none;
+  width: 100%;
 }
 
 .alert-success {
@@ -235,8 +236,18 @@ input[type="file"].form-control::-webkit-file-upload-button:hover {
   border: 1px solid var(--green);
 }
 
+.alert-warning {
+  background: var(--bs-warning) !important;
+}
+
+.alert-warning #response_body {
+  color: var(--bs-warning-text-emphasis);
+}
+
 .alert-danger {
-  background-color: rgba(255, 85, 85, 0.1);
-  color: var(--red);
-  border: 1px solid var(--red);
+  background-color: var(--red) !important;
+}
+
+.alert-danger #response_body {
+  color: var(--bs-danger-text-emphasis);
 }
