--- a/views/layout.html
+++ b/views/layout.html
@@ -36,7 +36,7 @@
 
     {{template "content" .}}
 
-    <div id="results" class="mt-5">
+    <div id="results">
       <div id="response">
         <pre id="response_body" class="mb-0"></pre>
       </div>
