--- a/views/layout.html
+++ b/views/layout.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Secure ephemeral secrets sharing platform">
+  <meta name="description" content="S³: Secure Secret Sharing platform">
   <meta name="theme-color" content="#4299E1">
-  <title>Ephemeral Secrets - Secure Sharing</title>
+  <title>S³: Secure Secret Share</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,8 +30,8 @@
       <div class="icon-wrapper">
         <i class="fas fa-user-shield fa-4x"></i>
       </div>
-      <h1 class="display-5">Ephemeral Secrets</h1>
-      <p>Secure, temporary secret sharing</p>
+      <h1 class="display-5">S³: Secure Secret Share</h1>
+      <p>Secure, ephemeral secret sharing</p>
     </div>
 
     {{template "content" .}}
