--- a/views/index.html
+++ b/views/index.html
@@ -1,40 +1,66 @@
 {{define "content"}}
-<form onsubmit="postSecret(event)" id="form" class="p-3 form-signin">
-  <div class="form-group">
-    <p class="font-weight-normal">Enter a password, secret message, or private link you wish to send
-      securely. A secret link only works for the number of times specified, then disappears forever.</p>
-  </div>
-  <div class="form-group">
-    <textarea type="text" name="secret" class="form-control" autocomplete="off" placeholder="content to be encrypted"
-      rows="6"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="ViewCount" class="form-label">View Count:</label>
-    <select name="view_count" class="form-control form-select" id="ViewCount">
-      <option selected>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-      <option>6</option>
-      <option>7</option>
-      <option>8</option>
-      <option>9</option>
-      <option>10</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="TTLDays" class="form-label">Days Before Expiration:</label>
-    <select name="ttl_days" class="form-control form-select" id="TTLDays">
-      <option>1</option>
-      <option>3</option>
-      <option selected>7</option>
-      <option>14</option>
-      <option>30</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <input type="submit" class="btn btn-primary w-100" value="Create Secret Link">
-  </div>
-</form>
+<div class="btn-group w-100 mb-4" role="group" aria-label="Encryption type">
+  <button type="button" class="btn btn-primary" id="textToggle" onclick="toggleEncryptionType('text')">Text
+    Encryption</button>
+  <button type="button" class="btn btn-outline-primary" id="fileToggle" onclick="toggleEncryptionType('file')">File
+    Encryption</button>
+</div>
+
+<!-- Text Encryption Form -->
+<div id="textForm">
+  <form onsubmit="postSecret(event)" id="form" class="p-3 form-signin">
+    <div class="form-group">
+      <p class="font-weight-normal">Enter a password, secret message, or private link you wish to send
+        securely. A secret link only works for the number of times specified, then disappears forever.</p>
+    </div>
+    <div class="form-group">
+      <textarea type="text" name="secret" class="form-control" autocomplete="off" placeholder="content to be encrypted"
+        rows="6"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="ViewCount" class="form-label">View Count:</label>
+      <select name="view_count" class="form-control form-select" id="ViewCount">
+        <option selected>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+        <option>10</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="TTLDays" class="form-label">Days Before Expiration:</label>
+      <select name="ttl_days" class="form-control form-select" id="TTLDays">
+        <option>1</option>
+        <option>3</option>
+        <option selected>7</option>
+        <option>14</option>
+        <option>30</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary w-100" value="Create Secret Link">
+    </div>
+  </form>
+</div>
+
+<!-- File Encryption Form -->
+<div id="fileForm" style="display: none;">
+  <p class="mt-5 px-3 font-weight-normal">Enter a file below you wish to send securely.<br /> The generated secret link
+    only works once to retrieve the file, then disappears forever.</p>
+  <form onsubmit="postSecretFile(event)" id="fileFormElement" class="pt-3 px-3 form-signin">
+    <div class="mb-3 form-group">
+      <input class="form-control" id="file" ref="file" type="file">
+    </div>
+    <br />
+    <div class="form-group d-grid gap-2">
+      <input type="submit" class="btn btn-primary" value="Create Secret Link">
+    </div>
+  </form>
+</div>
+
 {{end}}
