--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="S³: Secure Secret Sharing platform">
+  <meta name="description" content="Whisper: Secure Secret Sharing">
   <meta name="theme-color" content="#4299E1">
-  <title>S³: Secure Secret Share</title>
+  <title>Whisper: Secure Secret Sharing</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
       <div class="icon-wrapper">
         <i class="fas fa-user-shield fa-4x"></i>
       </div>
-      <h1 class="display-5">S³: Secure Secret Share</h1>
+      <h1 class="display-5">Whisper</h1>
       <p>Secure, ephemeral secret sharing</p>
     </div>
 
